# llamasum

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: api.md  benchmarking.md  documentation_completion.md  examples.md  features_overview.md  index.html  index.md  installation.html  installation.md  project_completion.md  report_generation.md  usage.html  usage.md
docs/api/: index.html  index.md
examples/: advanced_visualization.py  basic_usage.py  generate_report.py  run_benchmark.py  sample_dataset.json  visualize_benchmarks.py
llamasum/: __init__.py  client.py  main.py  utils.py
src/llamasum/: __init__.py  api.py  benchmark.py  cli.py  config.py  evaluation.py  extractive.py  hierarchical.py  multidoc.py  preprocessing.py  report.py  summarizer.py  visualize.py  web.py  web_ui.py
tests/: __init__.py  test_benchmark.py  test_client.py  test_hierarchical.py  test_main.py  test_multidoc.py  test_report.py  test_summarizer.py  test_visualization_integration.py  test_visualize.py
